--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ numpy~=1.25.2
 pydub~=0.25.1
 librosa~=0.10.2.post1
 madmom~=0.16.1
+scipy~=1.14.0 # required for myDBNDownBeatTrackingProcessor(DBNDownBeatTrackingProcessor)
